Gerenciamento de transacoes BC

--- a/20250808/GerenciadorDeTransacoes.ipynb
+++ b/20250808/GerenciadorDeTransacoes.ipynb
@@ -15,8 +15,17 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "Alex & Allan"
+      ],
+      "metadata": {
+        "id": "Bj1Y_eWHX6gP"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "TVxCOauDL90A"
       },
@@ -80,6 +89,15 @@
         "        transacao = Transacao(\"PROFESSOR\", destinatario, valor, motivo, \"APROVADA\")\n",
         "        return transacao  # 👈 Não é salva em pendentes (outro grupo cuida disso)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GpQv--PHX5F2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
